# iox2_jsonrpc

./: .gitignore  README.md  pyproject.toml  run.bat  run.zsh
.github/workflows/: tests.yml
examples/: camera.py  cli.py  common.py  gateway.py  server_a.py  server_b.py  webapi.py
examples/config/: services.toml
examples/oakd/: cli.py  cli_camera.py  cli_depth.py  cv2_viewer.py  dai_camera.py  pcd_dnn_utils.py  pcd_ros2_utils.py  pcd_utils.py  pcd_yolo_utils.py  rpc_server.py  rpc_server_camera.py  rpc_server_depth.py  run.bat  utils.py
iox2_jsonrpc/: __init__.py  controller.py  core.py  endpoint.py  gateway.py  iceoryx.py  iceoryx_helpers.py  iceoryx_protocols.py  iceoryx_registry.py  iceoryx_runtime.py  iceoryx_server.py  iox2_transport.py  models.py  packet.py  services.py
tests/: conftest.py  test_controller_endpoint.py  test_iceoryx_helpers.py  test_iceoryx_registry.py  test_models.py  test_readme_contracts.py
