[project]
name = "iox2-jsonrpc"
version = "0.3.0"
description = "Tiny JSON-RPC 2.0 over iceoryx2 with a FastAPI control gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "iceoryx2>=0.9.1",
  "pydantic>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]

[tool.hatch.envs.default.scripts]
build-install = [
  "python -m build",
  "uv install .",
]

[dependency-groups]
dev = [
    "fastapi>=0.136.3",
    "pytest>=9.0.3",
    "uvicorn>=0.49.0",
]
