[project]
name = "iox2-jsonrpc"
version = "0.3.0"
description = "Tiny JSON-RPC 2.0 over iceoryx2 with a FastAPI control gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "iceoryx2>=0.9.1",
  "pydantic>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
default-groups = ["dev"]

[dependency-groups]
dev = [
  "depthai>=3.7.1",
  "opencv-python>=4.13.0.92",
  "av>=17.1.0",
  "fastapi>=0.136.3",
  "pytest>=9.0.3",
  "uvicorn>=0.49.0",
]

[tool.hatch.build.targets.wheel]
packages = ["iox2_jsonrpc"]