[project]
name = "iox2-jsonrpc"
version = "0.3.0"
description = "Tiny JSON-RPC 2.0 over iceoryx2 with a FastAPI control gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "iceoryx2>=0.9.1",
  "pydantic>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
default-groups = ["dev"]

[dependency-groups]
dev = [
  "depthai>=3.7.1",
  "opencv-python>=4.13.0.92",
  "av>=17.1.0",
  "fastapi>=0.136.3",
  "pytest>=9.0.3",
  "uvicorn>=0.49.0",
  "ipython>=8.38.0",
  "imageio>=2.37.3",
  "omegaconf>=2.3.1",
  "triton-windows>=3.7.1.post27",
  "torch==2.10.0+cu126",
  "torchvision==0.25+cu126",
  "timm>=1.0.27",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["iox2_jsonrpc"]
